@@ -24,7 +24,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import org.apache.lucene.search.suggest.analyzing.FSTUtil;
-import org.apache.lucene.search.suggest.document.CompletionPostingsFormat.FSTLoadMode;
 import org.apache.lucene.store.ByteArrayDataInput;
 import org.apache.lucene.store.ByteArrayDataOutput;
 import org.apache.lucene.store.IndexInput;
@@ -306,37 +305,15 @@ public final class NRTSuggester implements Accountable {
     return (numDocs > 0) ? ((double) numDocs / maxDocs) : -1;
   }
 
-  private static boolean shouldLoadFSTOffHeap(IndexInput input, FSTLoadMode fstLoadMode) {
-    switch (fstLoadMode) {
-      case ON_HEAP:
-        return false;
-      case OFF_HEAP:
-        return true;
-      case AUTO:
-        // TODO: Make this less hacky to maybe expose "off-heap" feature using a marker interface on
-        // the IndexInput
-        return input.getClass().getName().contains(".MemorySegmentIndexInput");
-      default:
-        throw new IllegalStateException("unknown enum constant: " + fstLoadMode);
-    }
-  }
-
-  /**
-   * Loads a {@link NRTSuggester} from {@link org.apache.lucene.store.IndexInput} on or off-heap
-   * depending on the provided <code>fstLoadMode</code>
-   */
-  static NRTSuggester load(IndexInput input, FSTLoadMode fstLoadMode) throws IOException {
+  /** Loads a {@link NRTSuggester} from {@link org.apache.lucene.store.IndexInput} */
+  static NRTSuggester load(IndexInput input) throws IOException {
     final FST<Pair<Long, BytesRef>> fst;
     PairOutputs<Long, BytesRef> outputs =
         new PairOutputs<>(PositiveIntOutputs.getSingleton(), ByteSequenceOutputs.getSingleton());
-    if (shouldLoadFSTOffHeap(input, fstLoadMode)) {
-      final FST.FSTMetadata<Pair<Long, BytesRef>> fstMetadata = FST.readMetadata(input, outputs);
-      OffHeapFSTStore store = new OffHeapFSTStore(input, input.getFilePointer(), fstMetadata);
-      fst = FST.fromFSTReader(fstMetadata, store);
-      input.skipBytes(store.size());
-    } else {
-      fst = new FST<>(FST.readMetadata(input, outputs), input);
-    }
+    final FST.FSTMetadata<Pair<Long, BytesRef>> fstMetadata = FST.readMetadata(input, outputs);
+    OffHeapFSTStore store = new OffHeapFSTStore(input, input.getFilePointer(), fstMetadata);
+    fst = FST.fromFSTReader(fstMetadata, store);
+    input.skipBytes(store.size());
 
     /* read some meta info */
     int maxAnalyzedPathsPerOutput = input.readVInt();
